--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps
       - name: Run your tests
-        run: pytest -s -v
+        run: pytest -s -v --alluredir=reports
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
